@@ -32,6 +32,7 @@
 - Fix panic and flaky tests for the Agent. {pull}18135[18135]
 - Fix default configuration after enroll {pull}18232[18232]
 - Fix make sure the collected logs or metrics include streams information. {pull}18261[18261]
+- Stop monitoring on config change {pull}18284[18284]
 
 ==== New features
 
